Fix nav spacing

--- a/_patterns/header/header.css
+++ b/_patterns/header/header.css
@@ -18,7 +18,7 @@
 
   .header {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     padding-bottom: 0;
   }
 
@@ -34,6 +34,15 @@
 
   .logo {
     width: 110px;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  .nav-wrapper {
+    grid-column: 4 / -1;
+    justify-content: flex-end;
   }
 
 }
